force-app/main/default/objects/Account/fields/D_B_PRI_Naics_Desc__c.field-meta.xml
<CustomField>
    <fullName>D_B_PRI_Naics_Desc__c</fullName>
    <description>Fed from DW</description>
    <label>D&amp;B - PRI Naics Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>