force-app/main/default/objects/Account/fields/D_B_Primary_Web_Site__c.field-meta.xml
<CustomField>
    <fullName>D_B_Primary_Web_Site__c</fullName>
    <description>this data is fed in from the D&amp;B integration</description>
    <label>D&amp;B - Primary Web Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>