force-app/main/default/objects/Account/fields/D_B_PRNT_DUNS_Key__c.field-meta.xml
<CustomField>
    <fullName>D_B_PRNT_DUNS_Key__c</fullName>
    <description>Fed from DW.  Internal veritiv key to Parent Duns table</description>
    <label>D&amp;B - PRNT DUNS Key</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>