force-app/main/default/objects/Account/fields/D_B_Small_Business_Flag__c.field-meta.xml
<CustomField>
    <fullName>D_B_Small_Business_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this data is fed in from the D&amp;B integration</description>
    <label>D&amp;B - Small Business Flag</label>
    <type>Checkbox</type>
</CustomField>