force-app/main/default/objects/Account/fields/D_B_Total_Sales_Accur__c.field-meta.xml
<CustomField>
    <fullName>D_B_Total_Sales_Accur__c</fullName>
    <description>Fed from DW</description>
    <label>D&amp;B - Total Sales Accur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>