force-app/main/default/objects/Account/fields/D_B_Total_Sales_M__c.field-meta.xml
<CustomField>
    <fullName>D_B_Total_Sales_M__c</fullName>
    <label>D&amp;B - Total Sales M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>