force-app/main/default/objects/Account/fields/D_B_Year_Founded__c.field-meta.xml
<CustomField>
    <fullName>D_B_Year_Founded__c</fullName>
    <label>D&amp;B - Year Founded</label>
    <length>10</length>
    <type>Text</type>
</CustomField>