force-app/main/default/objects/Account/fields/D_U_N_S__c.field-meta.xml
<CustomField>
    <fullName>D_U_N_S__c</fullName>
    <description>Field being feed from the Datawarehouse for existing customers.  Used as unique key to integrate with Hoover&apos;s. Nov 2016 - Data fed in from data warehouse integration.</description>
    <inlineHelpText>Use the Get D&amp;B button to find this information - do NOT type it in directly</inlineHelpText>
    <label>D-U-N-S Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>