force-app/main/default/objects/Account/fields/Date_Created_Text_Format__c.field-meta.xml
<CustomField>
    <fullName>Date_Created_Text_Format__c</fullName>
    <description>Text format of the created date for display on the Account/Lead Search page</description>
    <formula>TEXT(DATEVALUE(CreatedDate) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date the account was created</inlineHelpText>
    <label>Date Created</label>
    <type>Text</type>
</CustomField>