force-app/main/default/objects/Account/fields/Date_Last_Modified_Txt_Format__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Modified_Txt_Format__c</fullName>
    <description>Text format of the last modified date for display on the Account/Lead Search page</description>
    <formula>TEXT(DATEVALUE(LastModifiedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date the account was last modified.  NOTE: Changes made with automatic/system updates ARE represented in this date.</inlineHelpText>
    <label>Date Last Modified</label>
    <type>Text</type>
</CustomField>