force-app/main/default/objects/Account/fields/Date_Prospect_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Prospect_Created__c</fullName>
    <label>Date Prospect Created</label>
    <type>Date</type>
</CustomField>