force-app/main/default/objects/Account/fields/DC_Business_Attributes__c.field-meta.xml
<CustomField>
    <fullName>DC_Business_Attributes__c</fullName>
    <description>Copied via workflow from D&amp;B record</description>
    <inlineHelpText>Information provided by D&amp;B (Small Business?, Minority-Owned?, Subsidiary?, Woman-Owned?, Location Ownership Type?)</inlineHelpText>
    <label>Business Attributes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>