force-app/main/default/objects/Account/fields/DC_Delinquency_Risk__c.field-meta.xml
<CustomField>
    <fullName>DC_Delinquency_Risk__c</fullName>
    <description>Copied via workflow from D&amp;B record</description>
    <inlineHelpText>Information provided by D&amp;B</inlineHelpText>
    <label>Delinquency Risk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>