force-app/main/default/objects/Account/fields/DC_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>DC_Location_Type__c</fullName>
    <description>Copied via workflow from D&amp;B record</description>
    <inlineHelpText>Information provided by D&amp;B</inlineHelpText>
    <label>Location Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>