force-app/main/default/objects/Account/fields/DC_Out_of_Business__c.field-meta.xml
<CustomField>
    <fullName>DC_Out_of_Business__c</fullName>
    <description>Copied via workflow from D&amp;B record</description>
    <inlineHelpText>Information provided by D&amp;B</inlineHelpText>
    <label>Out of Business?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>