force-app/main/default/objects/Account/fields/Deal_Manager_Complete__c.field-meta.xml
<CustomField>
    <fullName>Deal_Manager_Complete__c</fullName>
    <description>Checklist field for CX indicating Deal Manager Contract has been set up</description>
    <inlineHelpText>Date Deal Manager Contract has been set up</inlineHelpText>
    <label>Deal Manager Complete</label>
    <length>250</length>
    <type>Text</type>
</CustomField>