force-app/main/default/objects/Account/fields/Dedicated_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Inventory__c</fullName>
    <description>Customer Service Specific</description>
    <label>Dedicated Inventory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>