force-app/main/default/objects/Account/fields/Dedupe_Flag__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Flag__c</fullName>
    <description>Used to identify potential dupes for comparison in Demand Tools</description>
    <label>Dedupe Flag</label>
    <length>18</length>
    <type>Text</type>
</CustomField>