force-app/main/default/objects/Account/fields/Delete_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Delete_Prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only Prospects that do not have Opportunities, Quotes, Cases, or Contacts can be deleted.  If this Prospect is a duplicate of a Customer, please request a Prospect/Customer Merge instead.</inlineHelpText>
    <label>Delete Prospect</label>
    <type>Checkbox</type>
</CustomField>