force-app/main/default/objects/Account/fields/Delivery_Location_Access__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location_Access__c</fullName>
    <description>Will be fed in from Customer Onboarding form</description>
    <label>Delivery Location Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>