force-app/main/default/objects/Account/fields/Delivery_Notification_Emails__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Notification_Emails__c</fullName>
    <description>Fed in from Customer Onboarding Form</description>
    <inlineHelpText>Email addresses for Omnitracs notifications</inlineHelpText>
    <label>Delivery Notification Emails</label>
    <length>250</length>
    <type>Text</type>
</CustomField>