force-app/main/default/objects/Account/fields/Delivery_Window__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Window__c</fullName>
    <label>Delivery Window</label>
    <type>TextArea</type>
</CustomField>