force-app/main/default/objects/Account/fields/Desktop_Delivery_Required__c.field-meta.xml
<CustomField>
    <fullName>Desktop_Delivery_Required__c</fullName>
    <label>Desktop Delivery Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>Sometimes</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>