force-app/main/default/objects/Account/fields/DEU_TYPE__c.field-meta.xml
<CustomField>
    <fullName>DEU_TYPE__c</fullName>
    <label>DEU Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Designer</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>