force-app/main/default/objects/Account/fields/DI__c.field-meta.xml
<CustomField>
    <fullName>DI__c</fullName>
    <description>CUSTOMER SERVICE SPECIFIC</description>
    <inlineHelpText>DI = Direct. Enter percentage of time this order type is placed.</inlineHelpText>
    <label>DI</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>