force-app/main/default/objects/Account/fields/DNB_Confidence_Code__c.field-meta.xml
<CustomField>
    <fullName>DNB_Confidence_Code__c</fullName>
    <description>Pulls back from DNB</description>
    <inlineHelpText>Confidence # with the associated API call</inlineHelpText>
    <label>DNB Confidence Code</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>