force-app/main/default/objects/Account/fields/DNB_Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>DNB_Industry_Code__c</fullName>
    <description>Fed in from DW</description>
    <label>DNB Industry Code</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>