force-app/main/default/objects/Account/fields/DnB_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>DnB_Sync_Status__c</fullName>
    <label>D&amp;B Sync Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>