force-app/main/default/objects/Account/fields/Dock_Appt_Contact__c.field-meta.xml
<CustomField>
    <fullName>Dock_Appt_Contact__c</fullName>
    <description>Will be fed in from Customer Onboarding form</description>
    <label>Dock Appt Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>