force-app/main/default/objects/Account/fields/Dock_Appt_Phone__c.field-meta.xml
<CustomField>
    <fullName>Dock_Appt_Phone__c</fullName>
    <description>Will be fed in from Customer Onboarding form</description>
    <label>Dock Appt Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>