force-app/main/default/objects/Account/fields/Dock_Availability__c.field-meta.xml
<CustomField>
    <fullName>Dock_Availability__c</fullName>
    <description>Will be fed in from Customer Onboarding form</description>
    <label>Dock Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>