force-app/main/default/objects/Account/fields/eBusiness_Manager__c.field-meta.xml
<CustomField>
    <fullName>eBusiness_Manager__c</fullName>
    <description>eBusiness Manager assigned to this Servicing Division</description>
    <formula>Servicing_Division__r.eBusiness_Manager__r.FirstName &amp; &quot; &quot; &amp; Servicing_Division__r.eBusiness_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>eBusiness Manager assigned to this Account</inlineHelpText>
    <label>eBusiness Manager</label>
    <type>Text</type>
</CustomField>