force-app/main/default/objects/Account/fields/eCom_Complete__c.field-meta.xml
<CustomField>
    <fullName>eCom_Complete__c</fullName>
    <description>Checklist field for CX indicating eCom Setup is Complete</description>
    <inlineHelpText>Date eCommerce profiles set up</inlineHelpText>
    <label>eCom Complete</label>
    <length>250</length>
    <type>Text</type>
</CustomField>