force-app/main/default/objects/Account/fields/eCommerce_Access_Level__c.field-meta.xml
<CustomField>
    <fullName>eCommerce_Access_Level__c</fullName>
    <description>Will be fed in from Customer Onboarding form</description>
    <label>eCommerce Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approver</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Catalog Browser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>