force-app/main/default/objects/Account/fields/eCommerce_Customer__c.field-meta.xml
<CustomField>
    <fullName>eCommerce_Customer__c</fullName>
    <description>This is the &quot;Broadvision flag&quot; field from existing system. Nov 2016 - Data fed in from data warehouse integration.</description>
    <inlineHelpText>Used by eBusiness and imported from SFD, a &quot;yes&quot; in this field causes pricing to be uploaded to eCommerce.</inlineHelpText>
    <label>eBusiness Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>