force-app/main/default/objects/Account/fields/EDI_Account__c.field-meta.xml
<CustomField>
    <fullName>EDI_Account__c</fullName>
    <description>CUSTOMER SERVICE SPECIFIC</description>
    <inlineHelpText>EDI is the computer-to-computer exchange of business documents such as PO&apos;s, order acknowledgements and invoices.</inlineHelpText>
    <label>EDI Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>