force-app/main/default/objects/Account/fields/EDI_if_Yes_User_Defined_Field_UDF__c.field-meta.xml
<CustomField>
    <fullName>EDI_if_Yes_User_Defined_Field_UDF__c</fullName>
    <description>CUSTOMER SERVICE SPECIFIC</description>
    <inlineHelpText>UDF = Our code is mapped to their EDI code</inlineHelpText>
    <label>EDI - if Yes - User Defined Field (UDF)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>