force-app/main/default/objects/Account/fields/EDI_Setup_Request_Link__c.field-meta.xml
<CustomField>
    <fullName>EDI_Setup_Request_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://onfirstup.com/veritiv/vibe/contents/36638991&quot;, &quot;EDI&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EDI - Setup Request Link</label>
    <type>Text</type>
</CustomField>