force-app/main/default/objects/Account/fields/Employees_Hoovers__c.field-meta.xml
<CustomField>
    <fullName>Employees_Hoovers__c</fullName>
    <inlineHelpText>Number of employees as reported by market research tools.</inlineHelpText>
    <label>Reported # of Employees</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>