force-app/main/default/objects/Account/fields/Employees_On_Site_Accur__c.field-meta.xml
<CustomField>
    <fullName>Employees_On_Site_Accur__c</fullName>
    <description>Fed from DW</description>
    <label>Employees On Site Accur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>