force-app/main/default/objects/Account/fields/Equipment_Account__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used on Prospect to identify if the customer needs to be set up as an Equipment account</description>
    <inlineHelpText>Check this box if this customer needs to be set up as an Equipment account</inlineHelpText>
    <label>Equipment Account</label>
    <type>Checkbox</type>
</CustomField>