force-app/main/default/objects/Account/fields/ERS_Portal_Complete__c.field-meta.xml
<CustomField>
    <fullName>ERS_Portal_Complete__c</fullName>
    <description>Checklist item for CX</description>
    <inlineHelpText>Work with sales to see if ERS portal request is needed for customer demand</inlineHelpText>
    <label>ERS Portal Complete</label>
    <length>250</length>
    <type>Text</type>
</CustomField>