force-app/main/default/objects/Account/fields/Evo_Key__c.field-meta.xml
<CustomField>
    <fullName>Evo_Key__c</fullName>
    <externalId>true</externalId>
    <label>Evo Key</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>