force-app/main/default/objects/Account/fields/FA_Running_User_Device__c.field-meta.xml
<CustomField>
    <fullName>FA_Running_User_Device__c</fullName>
    <description>FormAssembly - check if running user is on mobile</description>
    <formula>IF($User.UIThemeDisplayed=&quot;Theme4t&quot;, &quot;tfa_1291&quot;, &quot;tfa_1290&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FA Running User Device</label>
    <type>Text</type>
</CustomField>