force-app/main/default/objects/Account/fields/FA_Running_User_Theme__c.field-meta.xml
<CustomField>
    <fullName>FA_Running_User_Theme__c</fullName>
    <description>Corresponds with the hidden field tfa_1292 (Theme?) on the work order form to determine if the user is in classic or lightning. This is required for knowing what URL to return a user to after they submit the work order. Do not delete.</description>
    <formula>IF($User.UIThemeDisplayed=&quot;Theme4d&quot;, &quot;tfa_1294&quot;, &quot;tfa_1293&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FA Running User Theme</label>
    <type>Text</type>
</CustomField>