force-app/main/default/objects/Account/fields/Focus_Account__c.field-meta.xml
<CustomField>
    <fullName>Focus_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to denote which Accounts reps should focus on when logging Activities.</inlineHelpText>
    <label>Top 5 Account</label>
    <type>Checkbox</type>
</CustomField>