force-app/main/default/objects/Account/fields/FormAssembly_Theme_Detector__c.field-meta.xml
<CustomField>
    <fullName>FormAssembly_Theme_Detector__c</fullName>
    <description>Stores the variable for form assembly to determine if the user is on mobile or desktop. Needed for lightning v. desktop classic v. mobile to work with corrugated/retail packaging.</description>
    <formula>IF( $User.UIThemeDisplayed =&quot;Theme4t&quot;, &quot;tfa_1130&quot;, &quot;tfa_1131&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormAssembly Theme Detector</label>
    <type>Text</type>
</CustomField>