force-app/main/default/objects/Account/fields/Fortune_1000_Company__c.field-meta.xml
<CustomField>
    <fullName>Fortune_1000_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Designates this company as a member of the Fortune 1000.</inlineHelpText>
    <label>Fortune 1000 Company</label>
    <type>Checkbox</type>
</CustomField>