force-app/main/default/objects/Account/fields/FS__c.field-meta.xml
<CustomField>
    <fullName>FS__c</fullName>
    <description>CUSTOMER SERVICE SPECIFIC</description>
    <inlineHelpText>FS = Facility Solutions</inlineHelpText>
    <label>FS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>