force-app/main/default/objects/Account/fields/FSC_Cert_No__c.field-meta.xml
<CustomField>
    <fullName>FSC_Cert_No__c</fullName>
    <label>FSC Cert No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>