force-app/main/default/objects/Account/fields/Full_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Full_Account_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Account ID</label>
    <type>Text</type>
</CustomField>