force-app/main/default/objects/Account/fields/Global_Ultimate_Duns_Number__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Duns_Number__c</fullName>
    <description>Fed in from DW</description>
    <label>Global Ultimate Duns Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>