force-app/main/default/objects/Account/fields/Green_Gauge_Report__c.field-meta.xml
<CustomField>
    <fullName>Green_Gauge_Report__c</fullName>
    <description>Green Gauge Report, changed to EcoScore in 2022</description>
    <formula>/* Builds a link based on the SAP BI Reports Setting custom setting to concatenate the URL, Report Id, encoded auth token, and whatever parameter values are required for this report to run, in this case the upper case value of the NetworkID */ 
HYPERLINK($Setup.SAP_BI_Reports_Setting__c.SAP_Report_Base_URL__c 
&amp;&quot;&amp;iDocID=&quot; 
&amp; $Setup.SAP_BI_Reports_Setting__c.Green_Gauge_Report__c

&amp;&quot;&amp;token=&quot; 
&amp;$Setup.SAP_BI_Reports_Setting__c.Encoded_Token__c &amp;$Setup.SAP_BI_Reports_Setting__c.Encoded_Token_Overflow__c 

&amp;&quot;&amp;sOutputFormat=P&quot; 



&amp;&quot;&amp;lsMSelect Report Version=&quot; 
&amp; UPPER(VBO_Green_Gauge_Country__c) 

&amp;&quot;&amp;lsMEnter Bill-To Customer Number=&quot; 
&amp; UPPER(VBO_Green_Gauge_Billto__c) 

&amp;&quot;&amp;lsMEnter Bill-to Customer System Code=&quot; 
&amp; UPPER(Legacy_System_Cd__c) , &quot;EcoScore Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>EcoScore Report</inlineHelpText>
    <label>EcoScore Report</label>
    <type>Text</type>
</CustomField>