force-app/main/default/objects/Account/fields/Growth__c.field-meta.xml
<CustomField>
    <fullName>Growth__c</fullName>
    <label>Growth</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Increasing</fullName>
            </value>
            <value>
                <fullName>Decreasing</fullName>
            </value>
            <value>
                <fullName>No Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>