force-app/main/default/objects/Account/fields/Growth_Targets__c.field-meta.xml
<CustomField>
    <fullName>Growth_Targets__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Managed by Sales Effectiveness to enable tracking of deals included in Packaging Growth Targets</inlineHelpText>
    <label>Growth Targets</label>
    <type>Checkbox</type>
</CustomField>