force-app/main/default/objects/Account/fields/Hard_Amount__c.field-meta.xml
<CustomField>
    <fullName>Hard_Amount__c</fullName>
    <label>Hard Amount</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>