force-app/main/default/objects/Account/fields/Hard_Order_Flag__c.field-meta.xml
<CustomField>
    <fullName>Hard_Order_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Nov 2016 - Data fed in from data warehouse integration.</description>
    <label>Mandatory</label>
    <type>Checkbox</type>
</CustomField>