force-app/main/default/objects/Account/fields/Has_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Has_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Agreement</label>
    <type>Checkbox</type>
</CustomField>