force-app/main/default/objects/Account/fields/HasActiveContacts__c.field-meta.xml
<CustomField>
    <fullName>HasActiveContacts__c</fullName>
    <formula>IF(
 Number_of_Active_Contacts__c &gt;0, &quot;Yes&quot;,&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Active Contacts?</label>
    <type>Text</type>
</CustomField>