force-app/main/default/objects/Account/fields/HasContacts__c.field-meta.xml
<CustomField>
    <fullName>HasContacts__c</fullName>
    <formula>IF(
 Number_of_Contacts__c &gt;0, &quot;Yes&quot;,&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Contacts?</label>
    <type>Text</type>
</CustomField>