force-app/main/default/objects/Account/fields/IMPORTANT_Location_Specific_Notes__c.field-meta.xml
<CustomField>
    <fullName>IMPORTANT_Location_Specific_Notes__c</fullName>
    <inlineHelpText>This area is to draw attention to unique requirements/processes that are outlined further in the appropriate ULS Location records.</inlineHelpText>
    <label>IMPORTANT Location-Specific Notes</label>
    <type>TextArea</type>
</CustomField>