force-app/main/default/objects/Account/fields/IN__c.field-meta.xml
<CustomField>
    <fullName>IN__c</fullName>
    <description>CUSTOMER SERVICE SPECIFIC</description>
    <inlineHelpText>IN = Indirect.  Enter percentage of time this order type is placed.</inlineHelpText>
    <label>IN</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>