force-app/main/default/objects/Account/fields/Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Date__c</fullName>
    <description>Fed from DW. It is the date the account was inactivated in VOS</description>
    <label>Inactive Date</label>
    <type>Date</type>
</CustomField>