force-app/main/default/objects/Account/fields/INFINIUM_DIV_CODE__c.field-meta.xml
<CustomField>
    <fullName>INFINIUM_DIV_CODE__c</fullName>
    <description>Nov 2016 - Data fed in from data warehouse integration.</description>
    <label>INFINIUM DIV CODE</label>
    <length>16</length>
    <type>Text</type>
</CustomField>