force-app/main/default/objects/Account/fields/Inside_Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Inside_Delivery_Location__c</fullName>
    <description>from Customer Onboarding form</description>
    <label>Inside Delivery Location</label>
    <type>TextArea</type>
</CustomField>