force-app/main/default/objects/Account/fields/Internal_Comments_to_Credit__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments_to_Credit__c</fullName>
    <inlineHelpText>If you wish to send comments to the Credit team for this new customer setup, enter them here.  These comments will NOT be visible to the customer.</inlineHelpText>
    <label>Internal Comments to Credit</label>
    <type>TextArea</type>
</CustomField>