force-app/main/default/objects/Account/fields/Internal_CSP_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_CSP_Comments__c</fullName>
    <label>Internal CSP Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>