force-app/main/default/objects/Account/fields/Internal_Growth_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Internal_Growth_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to flag accounts being included in pilot project for the Internal Growth Campaign</description>
    <inlineHelpText>Check this box if the customer is to be included in the pilot project for Internal Growth Campaign</inlineHelpText>
    <label>Internal Growth Campaign</label>
    <type>Checkbox</type>
</CustomField>