force-app/main/default/objects/Account/fields/Internal_Print_Pack_Resources__c.field-meta.xml
<CustomField>
    <fullName>Internal_Print_Pack_Resources__c</fullName>
    <label>Internal Print/Pack Resources?</label>
    <type>TextArea</type>
</CustomField>