force-app/main/default/objects/Account/fields/International_if_Yes_Describe__c.field-meta.xml
<CustomField>
    <fullName>International_if_Yes_Describe__c</fullName>
    <description>CUSTOMER SERVICE SPECIFIC</description>
    <label>International, if Yes - Describe</label>
    <length>200</length>
    <type>Text</type>
</CustomField>