force-app/main/default/objects/Account/fields/International_Shipments__c.field-meta.xml
<CustomField>
    <fullName>International_Shipments__c</fullName>
    <description>Customer Service Specific</description>
    <label>International Shipments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>