force-app/main/default/objects/Account/fields/Introductory_Call_Complete__c.field-meta.xml
<CustomField>
    <fullName>Introductory_Call_Complete__c</fullName>
    <description>Checklist field for CX indicating the CX introductory call with customer is complete</description>
    <inlineHelpText>Date of introductory call with customer introducing CXPs</inlineHelpText>
    <label>Introductory Call Complete</label>
    <length>250</length>
    <type>Text</type>
</CustomField>